--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -6,39 +6,47 @@
     <title>Curriculo Flávio Valentim</title>
     <!--CSS only-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css"
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container"
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
         <section>
         <h1><b>Flávio Valentim Lobato</b></h1>
         <img src="imagem/Flay.jpg">
         </section>
+    </div>
 </div>
-<div class="container"
+<dic class="row">
+<dic class="col-6">
     <section>
-        
-            <h2><b>Informações Pessoais</b></h2>
+        <fieldset>
+        <legemd> <h2><b>Informações Pessoais</b></h2> </legemd>
             <ul>
             <li>Sexo: Masculino</li>
             <li>Idade: 22</li>
-        </ul>   
+        </ul>
+        </fieldset>   
         </section>
-    </div>
-    <div class="container"
         <section>
-        <h2><b>Informações de Contato</b></h2>
+            <fieldset>
+        <legemd> <h2><b>Informações de Contato</b></h2> </legemd>
             <ul>
             <li>Watsapp: (69)99355-9305</li>
             <li>Telefone: (69)99355-9305</li>
             <li>Telefone 2: (69)99244-7559</li>
             <li>Email: flavi0val3ntim@gmail.com</li>
             </ul>
+        </fieldset>
         </section>
-    </div>
-    <div class="container"
+    </dic>
+    </dic>
+    <div class="row">
+        <div class="col-6">
         <section>
-        <h2><b>Cursos</b></h2>
+            <fieldset>
+        <legemd> <h2><b>Cursos</b></h2> </legemd>
             <ul>
             <li>Curso de informática básica</li> 
             <li>Curso de redes de computadores</li>
@@ -47,14 +55,17 @@
             <li>Auxiliar de departamento pessoal</li> 
             <li>Agente administrativo</li>
             </ul>
+            </fieldset>
         </section>
     </div>
-    <div class="container"
-            <section>
-            <h2><b></b>Experiencia</b></h2>
+</div>
+        <section>
+        <fieldset>
+        <legemd> <h2><b></b>Experiencia</b></h2> </legemd>
             <ul>
             <li>tenho experiencia em vendas de um ano na loja caça e pesca itaipu</li>
             </ul>
+        </fieldset>
         </section>
     </div>
     </body>
