--- a/Tabela_html/tabela-futebol.html
+++ b/Tabela_html/tabela-futebol.html
@@ -9,8 +9,8 @@
     <table style="width: auto;" border="5">
         <caption><b>Times de futebol</b></caption>
         <tr>
-        <td>Estados</td>
-        <td>times</td>
+        <td><b>Estados</b></td>
+        <td><b>times</b></td>
         </tr>
         <tr>
             <td>São Paulo</td>
