--- a/Tabela_html/tabela.html
+++ b/Tabela_html/tabela.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <table>
+    <table style="width: auto;" border="5">
         <tr>
             <td><b>Aluno</b></td>
             <td><b>Portugues</b></td>
