--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     
     <p><a href="Tabela_html/tabela.html"><button>Primeira Tabela</button></a></p>
 
+    <p><a href="Tabela_html/exercicios.html"><button>Tabela de futebool</button></a></p>
+
+    <p><a href="Tabela_html/lista.html"><button>Lista Escola</button></a></p>
+
     <a href="https://youtu.be/eLYhnBaWOzc?si=-x1C_4skit5kOhQY" target="_blank"><button>Video Desnessessario</button></a>
 
 </body>
