--- a/curriculo/index curriculo.html
+++ b/curriculo/index curriculo.html
@@ -1,64 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="container">
-    <section>
-        <h1><b>Flávio Valentim Lobato</b></h1>
-        <img src="imagem/Flay.jpg" width="200"
-        aling="center">
-    </div>    
-    </section>
         <section>
-        <fieldset> <legend> <h2> <b> Informações Pessoais </b> </h2> </legend>
-            <ul>
-            <li>Sexo: Masculino</li>
-            <li>Idade: 22</li>
-            </ul>   
-    </fieldset>
-        </section>
+            <h1><b>Flávio Valentim Lobato</b></h1>
+            <img src="imagem/Flay.jpg" width="200" aling="center">
+    </div>
+    </section>
+    <section>
         <fieldset>
-        <legend><h2><b>Informações de Contato</b></h2></legend>
+            <legend>
+                <h2> <b> Informações Pessoais </b> </h2>
+            </legend>
             <ul>
+                <li>Sexo: Masculino</li>
+                <li>Idade: 22</li>
+            </ul>
+        </fieldset>
+    </section>
+    <fieldset>
+        <legend>
+            <h2><b>Informações de Contato</b></h2>
+        </legend>
+        <ul>
             <li>Watsapp: (69)99355-9305</li>
             <li>Telefone: (69)99355-9305</li>
             <li>Telefone 2: (69)99244-7559</li>
             <li>Email: flavi0val3ntim@gmail.com</li>
-            </ul>
-        </fieldset>
-        </section>
-        <fieldset>
-        <legend><h2><b>Cursos</b></h2></legend>
-            <ul>
-            <li>Curso de informática básica</li> 
+        </ul>
+    </fieldset>
+    </section>
+    <fieldset>
+        <legend>
+            <h2><b>Cursos</b></h2>
+        </legend>
+        <ul>
+            <li>Curso de informática básica</li>
             <li>Curso de redes de computadores</li>
-            <li>Manutenção de computadores</li> 
+            <li>Manutenção de computadores</li>
             <li>Auxiliar de contabilidade</li>
-            <li>Auxiliar de departamento pessoal</li> 
+            <li>Auxiliar de departamento pessoal</li>
             <li>Agente administrativo</li>
+        </ul>
+    </fieldset>
+    </section>
+    <section>
+        <fieldset>
+            <legend>
+                <h2><b>Graduação</b></h2>
+            </legend>
+            <ul>
+                <li>Encino medio concluido</li>
+                <li>Curçando Analise e Desenvolvimento de Sistema</li>
             </ul>
         </fieldset>
-        </section>
-        <section>
-            <fieldset>
-                <legend><h2><b>Graduação</b></h2></legend>
-                <ul>
-                    <li>Encino medio concluido</li>
-                    <li>Curçando Analise e Desenvolvimento de Sistema</li>
-                </ul>
-            </fieldset>
-        </section>
-        <fieldset>
-        <legend><h2><b></b>Experiencia</b></h2></legend>
-            <ul>
+    </section>
+    <fieldset>
+        <legend>
+            <h2><b></b>Experiencia</b></h2>
+        </legend>
+        <ul>
             <li>tenho experiencia em vendas de um ano na loja caça e pesca itaipu</li>
-            </ul>
-            </fieldset>
-        </section>
+        </ul>
+    </fieldset>
+    </section>
+    <a href="file:///C:/Users/alunoifro/Documents/html%20flay/index.html"><button>volta</button></a>
 </body>
+
 </html>
