--- a/Tabela_html/tabela-futebol.html
+++ b/Tabela_html/tabela-futebol.html
@@ -1,66 +1,75 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabela</title>
 </head>
+
 <body>
     <table style="width: auto;" border="5">
         <caption><b>Times de futebol</b></caption>
         <tr>
-        <td><b>Estados</b></td>
-        <td><b>times</b></td>
+            <td><b>Estados</b></td>
+            <td><b>times</b></td>
         </tr>
         <tr>
             <td>São Paulo</td>
             <td>
-            <p>Bragantino</p>
-            <p>Santos</p>
-            <p>Corinthians</p>
-            <p>Ponte Preta</p>
-            Ituano</td>
+                <p>Bragantino</p>
+                <p>Santos</p>
+                <p>Corinthians</p>
+                <p>Ponte Preta</p>
+                Ituano
+            </td>
         </tr>
         <tr>
             <td>RIO DE JANEIRO</td>
             <td>
-            <p>Botafogo</p>
-            <p>Flamengo</p>
-            <p>Fluminense</p>
-            <p>Vasco</p>
-            Volta Redonda</td>
+                <p>Botafogo</p>
+                <p>Flamengo</p>
+                <p>Fluminense</p>
+                <p>Vasco</p>
+                Volta Redonda
+            </td>
         </tr>
         <tr>
             <td>MINAS GERAIS</td>
             <td>América Mineiro
-            <p>Atlético Mineiro</p>
-            <p>Cruzeiro</p>
-            <p>Tombense</p>
-            Pouso Alegre</td>
+                <p>Atlético Mineiro</p>
+                <p>Cruzeiro</p>
+                <p>Tombense</p>
+                Pouso Alegre
+            </td>
         </tr>
         <tr>
             <td>RIO GRANDE DO SUL</td>
             <td>Grêmio
-            <p>Internacional</p>
-            <p>Juventude</p>
-            <p>São josé</p>
-            Ypiranga</td>
+                <p>Internacional</p>
+                <p>Juventude</p>
+                <p>São josé</p>
+                Ypiranga
+            </td>
         </tr>
         <tr>
             <td>SANTA CATARINA</td>
             <td>Avai
-            <p>Chapecoense</p>
-            <p>Criciúma</p>
-            <p>Brusque</p>
-            Figueirense</td>
+                <p>Chapecoense</p>
+                <p>Criciúma</p>
+                <p>Brusque</p>
+                Figueirense
+            </td>
         </tr>
         <tr>
             <td>PARANÁ</td>
             <td>Coritiba
-            <p>Londrina</p>
-            <p>Operário</p>
-            Athletico Paranaense</td>
+                <p>Londrina</p>
+                <p>Operário</p>
+                Athletico Paranaense
+            </td>
         </tr>
     </table>
 </body>
+
 </html>
