--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -89,5 +89,5 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-<a href="file:///C:/Users/alunoifro/Documents/html%20flay/index.html"><button>volta</button></a>
+<a href="file:///C:/Users/hunte/Documents/GitHub/projeto-html-ads/index.html"><button>volta</button></a>
 </html>
