--- a/curriculo/index curriculo.html
+++ b/curriculo/index curriculo.html
@@ -72,7 +72,7 @@
         </ul>
     </fieldset>
     </section>
-    <a href="file:///C:/Users/alunoifro/Documents/html%20flay/index.html"><button>volta</button></a>
+    <a href="file:///C:/Users/hunte/Documents/GitHub/projeto-html-ads/index.html"><button>volta</button></a>
 </body>
 
 </html>
